--- a/index.html
+++ b/index.html
@@ -756,84 +756,46 @@
 }
 
 .info-textnomal {
-    margin-top: 0px; /* 上の余白 */
-    margin-bottom: 0px; /* 下に白い隙間を追加 */
-    font-size: 16px; /* 見やすいサイズに調整 */
-    color: #000000;
-    line-height: 1.6; /* 行間を少し広げる */
+    margin: 20px auto;
+    font-family: "Noto Sans JP", "Roboto", sans-serif;
+    font-size: 16px;
+    color: #c62828; /* 赤系で警告感 */
+    background-color: #fff8e1; /* 黄色ベースで目立たせる */
+    line-height: 1.8;
     text-align: center;
     word-wrap: break-word;
-    background-color: #eef9f5; /* 青っぽい背景色を追加 */
-    padding: 12px; /* 余白もやや広げて読みやすく */
-    border-radius: 4px;
-    width: 100%; /* 横幅を横一杯に */
-    box-sizing: border-box; /* パディング含めて横一杯に */
+    padding: 18px 20px;
+    border-radius: 12px;
+    border: 2px solid #ffc107;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    max-width: 850px;
+    box-sizing: border-box;
+    font-weight: bold;
+    position: relative;
+    animation: fadeInScale 0.6s ease-in-out;
 }
 
-/* 携帯端末向けのレスポンシブデザイン */
-@media (max-width: 768px) {
-    .info-textnomal {
-        font-size: 14px; /* スマホでも見やすいサイズに調整 */
-        margin-top: 0px; /* 上下のマージンを調整 */
-        line-height: 1.1; /* 行間を少し広げて読みやすく */
-        width: 100%; /* 横幅を横一杯に */
-        box-sizing: border-box; /* パディング含めて横一杯に */
+/* アニメーション定義 */
+@keyframes fadeInScale {
+    0% {
+        opacity: 0;
+        transform: scale(0.95);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
     }
 }
 
-/* 基本スタイル */
-.info-textnomal {
-    margin: 20px 0;
-    font-family: "Noto Sans JP", "Roboto", sans-serif;
-    font-size: 14px;
-    color: #333; /* 読みやすい濃い文字色 */
-    background-color: #f8f9fa;
-    line-height: 1.8;
-    text-align: left;
-    word-wrap: break-word;
-    padding: 20px;
-    border-radius: 8px;
-    border: 1px solid #ced4da;
-    max-width: 800px; /* 横幅制限 */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 軽い影を追加 */
-    overflow-y: auto; /* 長文スクロール対応 */
-}
-
-/* 見出しスタイル */
-.info-textnomal h1 {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.info-textnomal h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin-top: 15px;
-    margin-bottom: 8px;
-}
-
-/* 強調テキスト */
-.info-textnomal strong {
-    color: #007bff;
-}
-
-/* モバイル向け調整 */
+/* モバイル対応 */
 @media (max-width: 768px) {
     .info-textnomal {
         font-size: 15px;
         padding: 15px;
-        max-width: 100%;
-    }
-
-    .info-textnomal h1 {
-        font-size: 16px;
-    }
-
-    .info-textnomal h2 {
-        font-size: 14px;
+        max-width: 95%;
     }
 }
+
     </style>
 </head>
 
@@ -863,16 +825,16 @@
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">ノーマルカラー</button>
             <button type="button" onclick="showMenu('female')">コラーゲンカラー</button>
             <button type="button" onclick="showMenu('whitening')">プレックスカラー</button>
+            <button type="button" onclick="showMenu('male')">スタンダードカラー</button>
         </div>
 
         <div id="treatment-text" style="display: none; margin-bottom: 10px;"></div>
 
         <div id="male" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆ノーマルカラー◆</span>
+                <span class="highlight-text">◆スタンダードカラー◆</span>
             </div>
             <div class="symptoms">
                 <div class="info-textnomal">⚫︎2cm以上伸びている方は<br>全体染め(2cm以上の根元染め)をご選択ください</div>
@@ -886,13 +848,13 @@
             </div>
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="550">アルカリ除去 （後処理）</button>
-                <div class="info-textmemo">価格：＋550円</div>
+                <div class="info-textmemo">残留アルカリ除去・内部水分保持・消臭効果<br>価格：＋550円</div>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="770">プレックス（前・後処理付）</button>
-                <div class="info-textmemo">コラーゲン【保湿&毛髪保護】<br>①ハリ・コシUP<br>②ツヤ感・潤いUP<br>価格：＋770円</div>
+                <div class="info-textmemo">※前&後処理付<br>ダメージを抑えて内部から毛髪強化<br>価格：＋770円</div>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="550">コラーゲン（前処理付）</button>
-                 <div class="info-textmemo">価格：＋550円</div>
+                 <div class="info-textmemo">コラーゲン【保湿&毛髪保護】<br>①ハリ・コシUP<br>②ツヤ感・潤いUP<br>※前処理付<br>価格：＋550円</div>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"data-price="1430">カラーケアトリートメント</button>
-                <div class="info-textmemo">価格：＋1430円</div>
+                <div class="info-textmemo">2step サラサラor<br>3step うるおい<br>価格：＋1430円</div>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="330">頭皮保護ガード</button>
                 <div class="info-textmemo">価格：＋330円</div>
             </div>
@@ -915,7 +877,7 @@
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="550">アルカリ除去 （後処理）</button>
                 <div class="info-textmemo">価格：＋550円</div>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="1430">カラーケアトリートメント</button>
-                <div class="info-textmemo">価格：＋1430円</div>
+                <div class="info-textmemo">2step サラサラor<br>3step うるおい<br>価格：＋1430円</div>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="330">頭皮保護ガード</button>
                 <div class="info-textmemo">価格：＋330円</div>
             </div>
@@ -938,7 +900,7 @@
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="550">アルカリ除去 （後処理）</button>
                 <div class="info-textmemo">価格：＋550円</div>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="1430">カラーケアトリートメント</button>
-                <div class="info-textmemo">価格：＋1430円</div>
+                <div class="info-textmemo">2step サラサラor<br>3step うるおい<br>価格：＋1430円</div>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="330">頭皮保護ガード</button>
                 <div class="info-textmemo">価格：＋330円</div>
             </div>
