--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
             </div>
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="550">アルカリ除去 （後処理）</button>
-                <div class="info-textmemo">価格：＋550円</div>
+                <div class="info-textmemo">残留アルカリ除去・内部水分保持・消臭効果<br>価格：＋550円</div>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="1430">カラーケアトリートメント</button>
                 <div class="info-textmemo">2step サラサラor<br>3step うるおい<br>価格：＋1430円</div>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="330">頭皮保護ガード</button>
@@ -898,7 +898,7 @@
             </div>
             <div class="irradiations">
                 <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="550">アルカリ除去 （後処理）</button>
-                <div class="info-textmemo">価格：＋550円</div>
+                <div class="info-textmemo">残留アルカリ除去・内部水分保持・消臭効果<br>価格：＋550円</div>
                 <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="1430">カラーケアトリートメント</button>
                 <div class="info-textmemo">2step サラサラor<br>3step うるおい<br>価格：＋1430円</div>
                 <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="330">頭皮保護ガード</button>
