--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
             text-align: center;
         }
 
+.labeluranai {
+    display: block;
+    width: 100%;
+    box-sizing: border-box; /* paddingを含めた幅制御に必要 */
+    margin-bottom: 10px;
+    padding: 10px;
+    font-weight: bold;
+    background-color: #13ca5e;
+    color: white;
+    border-radius: 4px;
+    text-align: center;
+}
+
         .label2 {
             display: block;
             margin-bottom: 0px;
@@ -547,6 +560,31 @@
             }
         }
 
+.info-texturanai {
+    width: 100%;
+    box-sizing: border-box; /* padding込みで横幅調整 */
+    margin-top: 20px; /* 上の余白 */
+    margin-bottom: 10px; /* 下に白い隙間を追加 */
+    font-size: 13px;
+    color: #000000;
+    line-height: 1.5;
+    text-align: center;
+    word-wrap: break-word;
+    background-color: #eef9f5; /* 青っぽい背景色を追加 */
+    padding: 10px;
+    border-radius: 4px;
+}
+
+/* 携帯端末向けのレスポンシブデザイン */
+@media (max-width: 768px) {
+    .info-texturanai {
+        font-size: 11.5px; /* スマホでは少し小さく */
+        margin-top: 10px;   /* 上下のマージンを調整 */
+        line-height: 2.0;   /* テキストの高さ調整 */
+    }
+}
+
+
         /* 必須マークのスタイル */
         .required {
             color: #ffffff;
@@ -747,23 +785,23 @@
 
     <div class="container">
         <h1>占屋伊千夜<br>予約フォーム</h1>
-        <div class="info-text">より詳細な予約はチャットにてお願いします<br>例：4名様以上、ひとり60分以上、<br>10〜11時や0〜3時の予約等</div>
+        <div class="info-text">より詳細な予約はチャットにてお願いします<br>例：4名様以上<br>10〜11時や0〜3時の予約等</div>
         <div class="label2">お名前<span class="required">必須</span><br>（お名前にスペースは入れないで下さい）</div>
         <input type="text" id="name1" placeholder="一人目のお名前をご入力ください" oninput="saveInput('name1')">
 
         <div class="label2">生年月日<span class="required">必須</span><br>（例：1994年1月7日）</div>
         <input type="text" id="dateofbirth1" placeholder="例：1994年1月7日" oninput="saveInput('dateofbirth1')">
 
-        <div class="label3">二人目のお名前<br>（お名前にスペースは入れないで下さい）</div>
+        <div class="label3">二人目のお名前</div>
         <input type="text" id="name2" placeholder="二人目のお名前をご入力ください" oninput="saveInput('name2')">
 
-        <div class="label3">二人目の生年月日<br>（例：1994年1月7日）</div>
+        <div class="label3">二人目の生年月日</div>
         <input type="text" id="dateofbirth2" placeholder="例：1994年1月7日" oninput="saveInput('dateofbirth2')">
 
-        <div class="label3">三人目のお名前<br>（お名前にスペースは入れないで下さい）</div>
+        <div class="label3">三人目のお名前</div>
         <input type="text" id="name3" placeholder="三人目のお名前をご入力ください" oninput="saveInput('name3')">
 
-        <div class="label3">三人目の生年月日<br>（例：1994年1月7日）</div>
+        <div class="label3">三人目の生年月日</div>
         <input type="text" id="dateofbirth3" placeholder="例：1994年1月7日" oninput="saveInput('dateofbirth3')">
 
         <div class="label">ご来店回数</div>
@@ -847,7 +885,9 @@
                 <span class="highlight-text">◆占い教室◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment21')" data-price="15000">占い教室</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment21')" data-price="4000">占い教室</button>
+                <div class="info-texturanai">⇧タップしてください⇧<br>毎月第1、第3火曜日で希望日をご入力ください。<br>例.7月第1火曜日</div>
+                <input type="text" id="kibounitizi" placeholder="希望日を入力してください">
             </div>
         </div>
 
@@ -921,7 +961,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2006616429-V0q85Yed'
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -1031,6 +1071,7 @@
             const dateofbirth1 = document.getElementById('dateofbirth1').value;
             const dateofbirth2 = document.getElementById('dateofbirth2').value;
             const dateofbirth3 = document.getElementById('dateofbirth3').value;
+            const kibounitizi = document.getElementById('kibounitizi').value;
             const visitCountText = visitCount ? `<span style="color:#13ca5e;"><strong>【ご来店回数】</strong></span><br>・${visitCount}` : '・来店回数が未選択です';
 
             const selectedSymptomText = selectedSymptom.length > 0
@@ -1048,7 +1089,15 @@
 
             const totalAmountText = `<span style="color:#13ca5e;"><strong>【合計金額】</strong></span><br>・<span style="color:red; font-weight:bold;">¥${menuPrice + optionsPrice}</span>`;
 
-            const selectedDateText = selectedFullDate ? `<span style="color:#13ca5e;"><strong>【希望日時】</strong></span><br>・${selectedFullDate}` : '・日時が未選択です';
+if (selectedFullDate && kibounitizi) {
+  selectedDateText = `<span style="color:#13ca5e;"><strong>【希望日時】</strong></span><br>・${selectedFullDate}<br>・${kibounitizi}`;
+} else if (selectedFullDate) {
+  selectedDateText = `<span style="color:#13ca5e;"><strong>【希望日時】</strong></span><br>・${selectedFullDate}`;
+} else if (kibounitizi) {
+  selectedDateText = `<span style="color:#13ca5e;"><strong>【希望日時】</strong></span><br>・${kibounitizi}`;
+} else {
+  selectedDateText = '・日時が未選択です';
+}
 
 
     // 空欄チェックして"未入力"に置き換え
@@ -1106,11 +1155,11 @@
             <button class="edit-button" onclick="scrollToElement('firstirradiations')">修正する</button>
         </div>
         <hr>
-        <div class="info-row">
-            <p>${selectedDateText}</p>
-            <button class="edit-button" onclick="scrollToElement('calendar1')">修正する</button>
-        </div>
-        <hr>
+<div class="info-row">
+  <p>${selectedDateText}</p>
+  <button class="edit-button" onclick="scrollToElement('calendar1')">修正する</button>
+</div>
+<hr>
         <div class="info-row">
             <p>${totalAmountText}</p>
         </div>
@@ -1130,6 +1179,7 @@
         document.getElementById('name1').addEventListener('input', updateDisplayInfo);
         document.getElementById('name2').addEventListener('input', updateDisplayInfo);
         document.getElementById('name3').addEventListener('input', updateDisplayInfo);
+        document.getElementById('kibounitizi').addEventListener('input', updateDisplayInfo);
         document.getElementById('dateofbirth1').addEventListener('input', updateDisplayInfo);
         document.getElementById('dateofbirth2').addEventListener('input', updateDisplayInfo);
         document.getElementById('dateofbirth3').addEventListener('input', updateDisplayInfo);
@@ -1146,19 +1196,23 @@
             button.addEventListener('click', updateDisplayInfo);
         });
 
-        document.querySelectorAll('.symptoms button').forEach(button => {
-            button.addEventListener('click', () => {
-                const calendarContainer = document.querySelector('.calendar-container');
+document.querySelectorAll('.symptoms button').forEach(button => {
+    button.addEventListener('click', () => {
+        const calendarContainer = document.querySelector('.calendar-container');
 
-                // 選択されたメニューがあればカレンダーを表示
-                if (document.querySelectorAll('.symptoms button.active').length > 0) {
-                    calendarContainer.style.display = 'block';
-                } else {
-                    // 選択が解除された場合、カレンダーを非表示
-                    calendarContainer.style.display = 'none';
-                }
-            });
-        });
+        const activeButton = document.querySelector('.symptoms button.active');
+        const isKyoushitsu = activeButton && activeButton.textContent.includes('占い教室');
+
+        if (activeButton && !isKyoushitsu) {
+            // 「占い教室」以外が選ばれている場合のみ表示
+            calendarContainer.style.display = 'block';
+        } else {
+            // 占い教室または何も選択されていない場合は非表示
+            calendarContainer.style.display = 'none';
+        }
+    });
+});
+
 
         // 初期状態でカレンダーを非表示にする
         document.addEventListener('DOMContentLoaded', () => {
@@ -1248,7 +1302,7 @@ if (treatmentId === 'treatment1') {
 } else if (treatmentId === 'treatment20') {
     treatmentText.innerHTML = `<div style="text-align: left;">姓名判断（50分）</div><div style="text-align: right;"><strong><span style="color:#ff0000;">料金：9,000円</span></strong></div>`;
 } else if (treatmentId === 'treatment21') {
-    treatmentText.innerHTML = `<div style="text-align: left;">占い教室</div><div style="text-align: right;"><strong><span style="color:#ff0000;">料金：4,000円</span></strong></div>`;
+    treatmentText.innerHTML = `<div style="text-align: left;">占い教室<br><strong>毎月第1、第3火曜日開催</strong></div><div style="text-align: right;"><strong><span style="color:#ff0000;">料金：4,000円</span></strong></div>`;
             } else {
                 treatmentText.innerHTML = '';
             }
@@ -1257,6 +1311,45 @@ if (treatmentId === 'treatment1') {
             const symptomName = button.textContent;  // ボタンのテキストを取得
             selectedSymptom = [symptomName];  // 選択されたメニュー名を配列として保存
             menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // メニューの価格を取得
+
+// カレンダー・希望日時の表示制御
+const calendarContainer = document.querySelector('.calendar-container');
+const hopeLabel = document.querySelectorAll('.label');
+const hopeMemo = document.querySelectorAll('.info-textmemo');
+
+if (treatmentId === 'treatment21') {
+    // 占い教室が選ばれた場合
+    if (calendarContainer) calendarContainer.style.display = 'none';
+
+    hopeLabel.forEach(label => {
+        if (label.textContent.includes("希望日時")) {
+            label.style.display = 'none';
+        }
+    });
+
+    hopeMemo.forEach(memo => {
+        if (memo.textContent.includes("10〜11時と0〜3時の予約")) {
+            memo.style.display = 'none';
+        }
+    });
+
+} else {
+    // 他のメニューが選ばれた場合は再表示
+    if (calendarContainer) calendarContainer.style.display = 'block';
+
+    hopeLabel.forEach(label => {
+        if (label.textContent.includes("希望日時")) {
+            label.style.display = 'block';
+        }
+    });
+
+    hopeMemo.forEach(memo => {
+        if (memo.textContent.includes("10〜11時と0〜3時の予約")) {
+            memo.style.display = 'block';
+        }
+    });
+}
+
 
             // 表示を更新
             updateDisplayInfo();
@@ -1397,6 +1490,7 @@ if (treatmentId === 'treatment1') {
                 name2: document.getElementById('name2').value.trim(),
                 dateofbirth2: document.getElementById('dateofbirth2').value.trim(), // 生年月日を取得
                 name3: document.getElementById('name3').value.trim(),
+                kibounitizi: document.getElementById('kibounitizi').value.trim(),
                 dateofbirth3: document.getElementById('dateofbirth3').value.trim(), // 生年月日を取得
                 visitCount: visitCount,
                 selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
@@ -1424,7 +1518,7 @@ if (treatmentId === 'treatment1') {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n1人目お名前：${formData.name1}\n1人目生年月日：${formData.dateofbirth1}\n2人目お名前：${formData.name2}\n2人目生年月日：${formData.dateofbirth2}\n3人目お名前：${formData.name3}\n3人目生年月日：${formData.dateofbirth3}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n1人目お名前：${formData.name1}\n1人目生年月日：${formData.dateofbirth1}\n2人目お名前：${formData.name2}\n2人目生年月日：${formData.dateofbirth2}\n3人目お名前：${formData.name3}\n3人目生年月日：${formData.dateofbirth3}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n${formData.dates[0]}${formData.kibounitizi}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
