--- a/index.html
+++ b/index.html
@@ -673,17 +673,17 @@
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom1" data-price="9800">髭脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom2" data-price="14800">髭ダブル脱毛</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom2" data-price="14800">ワキ光脱毛</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom2" data-price="14800">ワキダブル脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom3" data-price="14800">眉毛脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom4" data-price="3300">VIOダブル脱毛</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom5" data-price="4400">襟足脱毛</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom5" data-price="4400">VIOワックス脱毛</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom4" data-price="3300">脇ダブル脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom6" data-price="4400">VIO光脱毛</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom5" data-price="4400">VIOワックス脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom17" data-price="1500">Sパーツ光脱毛</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom18" data-price="3900">Mパーツ光脱毛</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom19" data-price="5800">Lパーツ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom19" data-price="5800">Sパーツワックス脱毛</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom18" data-price="3900">Mパーツ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom19" data-price="5800">Mパーツワックス脱毛</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom19" data-price="5800">Lパーツ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom19" data-price="5800">Lパーツワックス脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom10" data-price="14800">腕全体光脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom10" data-price="14800">腕全体ワックス脱毛</button>
@@ -736,10 +736,10 @@
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom33" data-price="14800">ワキワックス脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom34" data-price="14800">ワキ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom37" data-price="14800">Sパーツ光脱毛</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom38" data-price="14800">Mパーツ光脱毛</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom39" data-price="14800">Lパーツ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom37" data-price="14800">Sパーツワックス脱毛</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom38" data-price="14800">Mパーツ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom38" data-price="14800">Mパーツワックス脱毛</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom39" data-price="14800">Lパーツ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom39" data-price="14800">Lパーツワックス脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom39" data-price="14800">もみあげ脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom40" data-price="14800">全身光脱毛</button>
