--- a/index.html
+++ b/index.html
@@ -699,17 +699,17 @@
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom1" data-price="9800">髭脱毛.</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom2" data-price="14800">髭ダブル脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom2" data-price="14800">ワキ光脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom2" data-price="14800">ワキダブル脱毛.</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom3" data-price="14800">眉毛脱毛.</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom4" data-price="3300">VIOダブル脱毛.</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom5" data-price="4400">襟足脱毛.</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom5" data-price="4400">VIOワックス脱毛.</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom4" data-price="3300">脇ダブル脱毛.</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom6" data-price="4400">VIO光脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom5" data-price="4400">VIOワックス脱毛.</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom17" data-price="1500">Sパーツ光脱毛.</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom18" data-price="3900">Mパーツ光脱毛.</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom19" data-price="5800">Lパーツ光脱毛.</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom19" data-price="5800">Sパーツワックス脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom18" data-price="3900">Mパーツ光脱毛.</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom19" data-price="5800">Mパーツワックス脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom19" data-price="5800">Lパーツ光脱毛.</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom19" data-price="5800">Lパーツワックス脱毛.</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom10" data-price="14800">腕全体光脱毛.</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom10" data-price="14800">腕全体ワックス脱毛.</button>
@@ -760,25 +760,26 @@
                 <span class="highlight-text">新規トライアルメニュー</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment16')" data-id="symptom42" data-price="1500">VIOダブル脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment17')" data-id="symptom43" data-price="3900">VIOワックス脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment18')" data-id="symptom44" data-price="5800">VIO光脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment19')" data-id="symptom45" data-price="5800">お顔ダブル脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment16')" data-id="symptom46" data-price="1500">お顔ワックス脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment17')" data-id="symptom47" data-price="3900">お顔光脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment18')" data-id="symptom48" data-price="5800">うなじダブル脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment19')" data-id="symptom49" data-price="5800">うなじワックス脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment16')" data-id="symptom50" data-price="1500">うなじ光脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment17')" data-id="symptom51" data-price="3900">ワキダブル脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment18')" data-id="symptom52" data-price="5800">ワキワックス脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment19')" data-id="symptom53" data-price="5800">ワキ.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment16')" data-id="symptom54" data-price="1500">Sパーツ光脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment17')" data-id="symptom55" data-price="3900">Mパーツ光脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment18')" data-id="symptom56" data-price="5800">Lパーツ光脱毛.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment19')" data-id="symptom57" data-price="5800">全身光脱毛Ⅰ.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment17')" data-id="symptom58" data-price="3900">全身光脱毛Ⅱ.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment18')" data-id="symptom59" data-price="5800">まつ育.</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment19')" data-id="symptom60" data-price="5800">セルフホワイトニング.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom23" data-price="9800">VIOダブル脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom24" data-price="3300">VIOワックス脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom25" data-price="4400">VIO光脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom26" data-price="4400">お顔ダブル脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom27" data-price="3300">お顔ワックス脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom28" data-price="14800">お顔光脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom29" data-price="14800">うなじダブル脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom30" data-price="14800">うなじワックス脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom31" data-price="14800">うなじ光脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom32" data-price="14800">ワキダブル脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom33" data-price="14800">ワキワックス脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom34" data-price="14800">ワキ光脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom37" data-price="14800">Sパーツ光脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom37" data-price="14800">Sパーツワックス脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom38" data-price="14800">Mパーツ光脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom38" data-price="14800">Mパーツワックス脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom39" data-price="14800">Lパーツ光脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom39" data-price="14800">Lパーツワックス脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom39" data-price="14800">もみあげ脱毛.</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom40" data-price="14800">全身光脱毛.</button>
             </div>
         </div>
 
